added planned UI design for 1st & 2nd pages, jsx changes

--- a/_Front_end_files_/public/index.html
+++ b/_Front_end_files_/public/index.html
@@ -6,6 +6,9 @@
     <!-- StyleSheets -->
     <link rel="stylesheet" type="text/css" href="reset.css">
     <link rel="stylesheet" type="text/css" href="mainStyleSheet.css">
+    <link rel="stylesheet" type="text/css" href="pageTwo.css">
+    <link rel="stylesheet" href="https://use.typekit.net/yzf6kbl.css">
+
     <!--Scripts-->
 
   </head>
